# CoD4x_Client_pub

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  README.txt  compiledll-development.cmd  compiledll-release.cmd  compiledll_common.cmd  compiledll_common.sh  knownexceptions.txt  release.sh  todelete
.github/workflows/: build.yml
assets/cod4x/: core  mss
assets/cod4x/main/: jcod4x_00.iwd
assets/cod4x/zone/: cod4x_ambfix.ff  cod4x_patch.ff  cod4x_patchv2.ff
freetype-2.9/: modules.cfg
freetype-2.9/objs/: freetype.def  ftmodule.h
src/: CMakeLists.txt  bg_items.c  bg_items.h  bg_shared.c  bg_shared.h  callbacks.asm  callbacks.h  cg_font.c  cg_local_mp.h  cg_main.c  cg_scoreboard.c  cg_scoreboard.h  cg_servercmds.c  cg_shared.h  cg_vehicles_mp.c  cg_view.c  cg_weapons.c  cg_weapons.h  cl_console.c  cl_input.h  cl_keys.c  cl_main.c  cl_netchan.c  cl_rank.c  cl_ui.c  client.h  client_callbacks.asm  cm_local.h  cmd.c  cod4x_unzip_utils.c  com_findxassets.c  com_stringtable.c  common.c  crc.c  cvar.c  debug.cpp  developer_utils.c  dobj.c  dobj.h  dsound.h  (+71 more)
src/crashrpt/: CrashRpt.h  TinyCrashRpt.h
src/discord-rpc-api/: CMakeLists.txt  compilediscordrpc.cmd  compilediscordrpc.sh  compilediscordrpc_debug.cmd
src/discord-rpc-api/src/: discord_rpc.cpp
src/gfx/: gfx_world.h  r_debug.cpp  r_debug.h  r_depthprepass.cpp  r_draw_cmdbuf.cpp  r_draw_cmdbuf.h  r_draw_lit.cpp  r_draw_material.cpp  r_drawbsp.cpp  r_image.h  r_local.h  r_material.h  r_rendertarget.cpp  r_setstate.cpp  r_shade.cpp  r_shared.h  r_state.cpp  r_state.h  r_state_utils.cpp  r_stream.cpp  r_types_d3d.h  r_water.cpp  rb_backend.h  rb_draw_3d.cpp  rb_logfile.cpp  rb_shade.cpp  rb_tess.cpp  win_debugcon.cpp  win_debugcon.h
src/libudis86/: CMakeLists.txt  compilelibudis86.cmd  compilelibudis86.sh  decode.c  syn.c  udint.h  udis86.c
src/mbedtls/: build.cmd  build.sh
src/steam_api/: CMakeLists.txt  compilesteamapi.cmd  compilesteamapi.sh  compilesteamapi_dbg.cmd  isteamfriends.h  isteamuser.h  steam_api.cpp  steam_apix.h  steam_interface.cpp
src/steam_api/opensteamworks/: IClientApps.h  IClientEngine.h  IClientUser.h  IClientUserSafe.h  IClientUtils.h  IClientUtilsSafe.h
src/tomcrypt/: CMakeLists.txt  compile.cmd  compile.sh
src/tomcrypt/hashes/: blake2s.c
src/tomcrypt/pk/asn1/der/sequence/: der_decode_sequence_ex.c
src/ui/: cod4x_auconfirm.menu.c  cod4xupdate_pop.menu.c  menudefinition.h  ui_menus.h
src/unzip/: cod4x_utils.c  unzip.c  unzip.h
src/xassets/: font.c  font.h  fx.h  gfximage.h  gfxworld.h  material.c  material.h  menudef.h  menulist.h  simple.h  sounds.h  weapondef.h  xanim.h  xmodel.h
